src/objects/Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>AMC_Amount__c</fullName>
        <label>AMC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMC_Created__c</fullName>
        <label>AMC Created</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMC_Status__c</fullName>
        <label>AMC Status</label>
        <picklist>
            <controllingField>Warranty_Status__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMC_Type__c</fullName>
        <label>AMC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Comprehensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent_Name</label>
        <picklist>
            <picklistValues>
                <fullName>MAMTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SATENDRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEVIKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAHUL DAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AARTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANUJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POOJA BHARDWAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REKHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMANSHU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANJAY KUMAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRATHNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGAR BISHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHISH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRAMOD BHATT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VINEETA RAWAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANDIP DAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAGHU CHAUDHARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALBIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJESH VERMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RANDHIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHAWNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAYANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIVEK SHARMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRAVIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aging_1__c</fullName>
        <formula>( TODAY()  -   DATEVALUE( CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_2__c</fullName>
        <formula>ClosedDate__c  -  Date_Time_Opened__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_FSR_No__c</fullName>
        <label>Alternate FSR No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Status__c</fullName>
        <label>Approval Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Taken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attended_Date_Time__c</fullName>
        <label>Attended Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Total__c</fullName>
        <formula>Component_Charges__c  +  Service_Charges__c  +  Service_Charges_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Battery_Approval_Date__c</fullName>
        <label>Battery Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Cust__c</fullName>
        <formula>Account__r.BillingStreet + &apos;  &apos; + Account__r.BillingCity + &apos;  &apos; + Account__r.BillingState + &apos;  &apos; + Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Cust</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Location_Type__c</fullName>
        <formula>Service_Engineer_Assigned__r.Related_to_Service_Center__r.Related_To_Branch__r.Service_Center_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_SUB_STATUS__c</fullName>
        <label>CALL SUB STATUS</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>PART PENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO POWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOOR LOCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER NOT AVAILABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFER TO TRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING FOR PJP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHANICAL PROBLEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENDING FOR REPLACEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPROVAL ON HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPROVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISAPPROVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRONG ADDRESS/ INVALID CONTACT No.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER BRAND PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER REFUSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLICATE CALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHERS-PENDING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CALL_TYPE__c</fullName>
        <description>FOR DIFFERENTIATE SERVICE REQUEST.</description>
        <label>Call Type</label>
        <picklist>
            <controllingField>Complain_Type__c</controllingField>
            <picklistValues>
                <fullName>COMPLAIN END USER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLAIN DEALER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRC REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENERAL VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT SALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREE SERVICE CAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPANY STOCK SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALER STOCK SET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIN_No__c</fullName>
        <formula>Account__r.Customer_ID__c</formula>
        <label>CIN No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Street__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Zip__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Amount__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Alarming Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Battery Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shock problem in inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Bulging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burn Smell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery smells(high fume release)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Workflow</description>
        <label>Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Date_Format__c</fullName>
        <formula>TEXT( DAY( DATEVALUE( ClosedDate__c ) )) + &apos;-&apos; +  

        CASE( MONTH( DATEVALUE( ClosedDate__c ) ) , 
                   1, &apos;JAN&apos;, 
                   2, &apos;FEB&apos;,
                   3, &apos;MAR&apos;, 
                   4, &apos;APR&apos;,
                   5, &apos;MAY&apos;, 
                   6, &apos;JUN&apos;, 
                   7, &apos;JUL&apos;, 
                   8, &apos;AUG&apos;,
                   9, &apos;SEP&apos;, 
                 10, &apos;OCT&apos;,
                 11, &apos;NOV&apos;, 
                 12, &apos;DEC&apos;,
                  &apos;&apos;
       ) + &apos;-&apos; +  

TEXT(YEAR( DATEVALUE( ClosedDate__c ) ) )</formula>
        <label>Closed Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Internal Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name_Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name : Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Mobile__c</fullName>
        <formula>Account__r.Mobile_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name : Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name : Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complain_Type__c</fullName>
        <label>Complain Type</label>
        <picklist>
            <picklistValues>
                <fullName>COMPLAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLAIN STOCK SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDITIONAL SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT SALE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Time__c</fullName>
        <label>Completion Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Bill_No__c</fullName>
        <label>Component Bill No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Charges__c</fullName>
        <label>Component Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Amount__c</fullName>
        <formula>Component_Charges__c  * Component_Tax_Rate_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Rate_1__c</fullName>
        <label>Component Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Component_Tax_Rate__c</fullName>
        <formula>12.50/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>ContactPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_No__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF(Account__r.IsPersonAccount ,Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName , Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_No__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CASE(MONTH(   DATEVALUE(Date_Time_Opened__c )    ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Account__r.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_No__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Mobile No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_in_Component_Charges__c</fullName>
        <label>Discount % in Component Charges</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_in_Service_Charges__c</fullName>
        <label>Discount % in Service Charges</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ERP_Service_Type__c</fullName>
        <defaultValue>&apos;Service&apos;</defaultValue>
        <description>This field is made for ERP data only</description>
        <label>ERP Service Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email To Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Service_Request__c</fullName>
        <label>Estimated Value of Service Request</label>
        <picklist>
            <controllingField>Type_of_Replacement__c</controllingField>
            <picklistValues>
                <fullName>Upto INR 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above INR 50,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSR_No__c</fullName>
        <externalId>true</externalId>
        <label>FSR No.</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSR_Trig__c</fullName>
        <externalId>true</externalId>
        <label>FSR Trig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>(Service_Charges_After_Tax__c  +  Total_Component_Amount_After_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>TUBULAR BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMF BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR BATTERY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interim_Approval__c</fullName>
        <label>Interim Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_No_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice No. Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAst_modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAst modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Misc_Component_Charges_Remark__c</fullName>
        <label>Misc. Component Charges Remark</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Component_Charges__c</fullName>
        <label>Misc. Component Charges</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Service_Charges_Remark__c</fullName>
        <label>Misc. Service Charges Remark</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Basic_CC_Amount__c</fullName>
        <formula>( Component_Charges__c - Component_Charges__c * Discount_in_Component_Charges__c )+ Misc_Component_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Basic CC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Basic_SC_Amount__c</fullName>
        <formula>(Service_Charges__c  - Service_Charges__c  *  Discount_in_Service_Charges__c  )  +   Service_Charges_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Basic SC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPERATING_UNIT__c</fullName>
        <label>OPERATING UNIT</label>
        <picklist>
            <picklistValues>
                <fullName>SU-KAM POWER SYSTEMS LIMITED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Expenses__c</fullName>
        <label>Other Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROBLEM_OBSERVED__c</fullName>
        <description>ACTUAL PROBLEM OBSERVED BY ENGINEER.</description>
        <inlineHelpText>**</inlineHelpText>
        <label>Problem Observed By Engineer</label>
        <picklist>
            <picklistValues>
                <fullName>BATTERY FAILED DUE TO IDLING EFFECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON MAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINS MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BLOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BROKEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM ON BUT NO OUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM DEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS LOW BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER LOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS SHORT CIRCUIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGING CONTINUSELY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT CHARGING BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY OVERHEATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY DRY RUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTOR BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSIT DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSFORMER BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARD BURNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANGEOVER PROBLEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAN NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOOSE CONNECTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCKET DAMAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIN LEAD FAULTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED DISPLAY NOT WORKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM SHOWS OVER TEMPERATURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY LOW BACKUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Service_Request__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Date_for_Visit__c</fullName>
        <description>Here we put in the Customer&apos;s preffered Date of Visit by Service Engineer. By Default the value is Case Created Date</description>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Time__c</fullName>
        <label>Preferred Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Detected__c</fullName>
        <label>Problem Detected (In Brief)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>